--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ target_include_directories (Domiplan INTERFACE
 
 enable_testing ()
 
+include_directories(ColorSystem/include)
+
 add_subdirectory (test)
 add_subdirectory (ColorSystem)
 
