--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ColorSystem"]
 	path = ColorSystem
 	url = https://github.com/nikq/ColorSystem
+[submodule "stb"]
+	path = stb
+	url = https://github.com/nothings/stb.git
